# ThreatExtract-IOC-NER

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  Dockerfile  FAQ.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  entity_type_request.md  feature_request.md
configs/: training_config.yaml
data/: .gitkeep
scripts/: __init__.py  evaluate.py  generate_sample_data.py  push_to_hub.py  train.py
src/: __init__.py
src/threatextract/: __init__.py  data.py  labels.py  model.py  pipeline.py
tests/: __init__.py  test_data.py  test_labels.py
