[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threatextract-ioc-ner"
version = "1.0.0"
description = "A fine-tuned NER model for extracting Indicators of Compromise (IOCs) from threat intelligence text"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "ftrout"}
]
keywords = [
    "nlp",
    "ner",
    "named-entity-recognition",
    "threat-intelligence",
    "ioc",
    "cybersecurity",
    "malware",
    "transformers",
    "bert",
    "huggingface"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "evaluate>=0.4.0",
    "seqeval>=1.2.2",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "huggingface-hub>=0.19.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.1.99",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
demo = [
    "gradio>=4.0.0",
]
all = [
    "threatextract-ioc-ner[dev,demo]",
]

[project.urls]
Homepage = "https://github.com/ftrout/ThreatExtract-IOC-NER"
Documentation = "https://github.com/ftrout/ThreatExtract-IOC-NER#readme"
Repository = "https://github.com/ftrout/ThreatExtract-IOC-NER.git"
Issues = "https://github.com/ftrout/ThreatExtract-IOC-NER/issues"

[project.scripts]
threatextract-train = "scripts.train:main"
threatextract-evaluate = "scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src", "scripts"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
